# linphonemedia

./: .gitignore  AndroidManifest.xml  README.md  check_tools.mk  default.properties  local.properties
res/layout/: openfire_login.xml
res/values/: non_localizable_custom.xml
src/org/linphone/: LinphoneLauncherActivity.java
src/org/linphone/openfire/: openfireMain.java
submodules/libilbc-rfc3951/: .gitignore  README  autogen.sh  configure.ac
submodules/libilbc-rfc3951/downloads/: Makefile.am
submodules/msilbc/: .gitignore  Android.mk  autogen.sh  configure.ac
